<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/NewTransactionToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:theme="@style/ToolBarStyle">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="Update transaction"
                android:textColor="@color/White"
                android:textSize="24dp" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tvType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/label_margin"
            android:fontFamily="sans-serif-light"
            android:text="Type" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:id="@+id/rgType"
            android:orientation="horizontal"
            android:layout_marginStart="11dp">
            <RadioButton
                android:text="Expense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rbExpense"
                android:layout_weight="1"
                android:textSize="14sp"
                android:buttonTint="@color/colorPrimary"/>
            <RadioButton
                android:text="Income"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rbIncome"
                android:layout_weight="1"
                android:textSize="14sp"
                android:buttonTint="@color/colorPrimary"/>
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/forms_horizontal_line_height"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="@dimen/horizontal_separator_margin"
            android:layout_marginEnd="@dimen/horizontal_separator_margin"/>

        <TextView
            android:text="Amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvAmount"
            android:layout_marginStart="@dimen/label_margin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/forms_layout_height"
            android:inputType="numberDecimal"
            android:id="@+id/etAmount"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            android:layout_marginStart="@dimen/forms_margin_start"
            android:layout_marginEnd="@dimen/forms_margin_start"
            android:theme="@style/EditTextTheme"/>

        <TextView
            android:text="Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDate0"
            android:layout_marginStart="@dimen/label_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/tvDate"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/label_margin"
            android:textColor="@color/Black"
            android:textColorHighlight="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/forms_horizontal_line_height"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="@dimen/horizontal_separator_margin"
            android:layout_marginEnd="@dimen/horizontal_separator_margin"/>

        <TextView
            android:text="@string/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvCategory"
            android:layout_marginStart="@dimen/label_margin"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="@dimen/forms_layout_height"
            android:id="@+id/spinCategory"
            android:gravity="center_vertical"
            android:prompt="@string/category"
            android:layout_margin="@dimen/forms_margin_start"
            android:theme="@style/EditTextTheme"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>

        <TextView
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescription"
            android:layout_marginStart="@dimen/label_margin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/forms_layout_height"
            android:inputType="textCapSentences"
            android:maxLength="100"
            android:id="@+id/etDescription"
            android:textSize="14sp"
            android:layout_marginStart="@dimen/forms_margin_start"
            android:layout_marginEnd="@dimen/forms_margin_start"
            android:theme="@style/EditTextTheme"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forms_layout_height"
            android:layout_marginStart="@dimen/label_margin"
            android:layout_marginEnd="@dimen/label_margin">
            <Button
                android:text="@android:string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCancelClick"
                android:id="@+id/cancelButton"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="@color/White"/>
            <Button
                android:text="@string/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onUpdateClick"
                android:id="@+id/acceptButton"
                android:layout_weight="1"
                android:textColor="@color/White"
                android:background="@color/colorPrimary"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>